Added media query

--- a/style.css
+++ b/style.css
@@ -155,3 +155,14 @@ a:active {
 .aligncenter {
     text-align: center;
 }
+
+/* ---  (Desktop) Groups & Items --- */
+
+@media all and (min-width: 800px) {
+  section {
+    padding: 0 10%;
+  }
+  .group {
+    flex-direction: row;
+  }
+}
